Fixed some spacing issues
Aligned nav items right in dropdown (forced to align right in normal form too, deal with it I guess)
added media queries
updated logo

--- a/src/containers/Landing/Landing.module.css
+++ b/src/containers/Landing/Landing.module.css
@@ -6,3 +6,9 @@
     font-size: 1.25rem;
   }
 }
+
+@media (max-width: 991px) {
+  .hero-img img {
+    max-width: 50%;
+  }
+}
